# GW_FOPT_Simulation

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Final_Version.py  LICENSE.txt  README.md  fluxograma.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
Article/: Effective_Potential_OPT.py  Effective_Potential_OPT_cleaned.py  Mathematica.py  Only_Daisy.py  tests_OPT.py  tests_OPT_compare.py  veff_points.csv
Article/opt_example_outputs/: physical_eta_vs_T_table.csv  potential_scan_comparison.csv  potential_scan_table.csv
Article/results_MH_50/: diagnostics_summary_50.json
Article/results_T_Test/: diagnostics_summary_T_Test.json
Article/results_VEW_100/: diagnostics_summary_100.json
Article/results_VEW_70/: diagnostics_summary_70.json
Article/results_VEW_80/: diagnostics_summary_80.json
Article/results_VEW_90/: diagnostics_summary_90.json
Article/results_VEW_95/: diagnostics_summary_95.json
Article/results_cleaned_daisy_50/: diagnostics_summary_daisy_mu0.json
Article/results_cleaned_daisy_55/: diagnostics_summary_daisy_mu0.json
Article/results_cleaned_daisy_mh_50/: diagnostics_summary_daisy_mu0.json
CosmoTranstions_2/: __init__.py  helper_functions.py  teste.py
Testes/: helper_function_testes.py  helper_functions_tests.py
Thesis/Thesis_Main_Code/: results_plots.py  thesis_gw_results.py
architecture/: index.html
cosmoTransitions/: finiteT_b.dat.txt  finiteT_f.dat.txt  helper_functions.py
docs/: architecture.md  index.md  roadmap.md
docs/Thesis/: Figs.py  thesis_fopt_gw_cubic.py
docs/examples/: example_paper.md  example_transitionFinder.md  example_transitionFinder.py  example_tunneling1D.md  example_tunneling1D.py
docs/js/: mermaid-init.js
docs/modules/: helper_functions.md
examples/: example_transitionFinder.py  example_tunneling1D.py
examples/Paper_Glauber/: example_paper.py
examples/example_paper/: index.html
examples/example_transitionFinder/: index.html
examples/example_tunneling1D/: index.html
javascripts/: katex.js  mathjax-config.js
roadmap/: index.html
scripts/: dev_setup.sh  run_examples.sh
search/: search_index.json
src/: __init__.py
src/CosmoTransitions/: Jb_spline_v1.npz  Jf_spline_v1.npz  OPT.py  __init__.py  finiteT.py  generic_potential.py  gravitational_Waves.py  transitionFinder.py  tunneling1D.py
tests/OPT/: tests_opt.py
tests/finiteT/: Approx_Thermal_Integrals.py  Exact_Thermal_Integrals.py  Short_Hand_Jb&Jf.py  (+1 more)
tests_helper_functions/: Miscellaneous_functions.py  Numerical_derivatives.py  Numerical_integration.py  interpolation_functions.py
(+3433 files in other folders)
