[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CosmoTransitions"      # pode ajustar depois
version = "0.1.0"
description = "Modernized CosmoTransitions for FOPTs and GW forecasts."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Igor Almeida da Silva Gouvêa Stellet" },
  { name = "Felipe Tovar Falciano" }
]
dependencies = ["numpy>=1.26","scipy>=1.11" ,"matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/IgorStellet/GW_FOPT_Simulation"
Repository = "https://github.com/IgorStellet/GW_FOPT_Simulation"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["CosmoTransitions*"]
